Revision history for {{$dist->name}}

{{$NEXT}}
          Documented Commands: new, clean, build, install, release

1.092070  2009-07-27
          *** MIGHT VERY WELL BREAK YOUR BUNDLES ***
          major revamp of configuration subsystem, including pluggable config
          readers and the new, highly-experimental and probably-stupid Perl
          config reader

1.091940  2009-07-12
          fix version number of EUMM required to use LICENSE param
          ( https://rt.cpan.org/Public/Bug/Display.html?id=47817 )

1.091610  2009-06-09
          up the required Pod::Eventual
          tweak detection of Perl files by content (Jérôme Quelin)

1.091480  2009-05-28 13:59:35 UTC
          fix abstract-guessing to work with new Pod::Eventual

1.091440  2009-05-24 18:01:51 UTC
          more quotemeta in generated code
          add namespace::autoclean (Florian Ragwitz)
          remove unnecessary dep on MX::ClassAttribute (Florian Ragwitz)
          break type declarations into their own library (Florian Ragwitz)

1.091430  2009-05-23 01:48:20 UTC
          add meta-spec entry to metafiles (thanks, doy)
          generate MetaYAML with YAML::Tiny

1.091370  2009-05-17
          MetaJSON added
          MetaYaml is now MetaYAML

1.091260  2009-05-06
          correct naming of plugins brought in by @Classic

1.091250  2009-05-05
          add AutoVersion plugin
          avoid some warnings when making immutable
          improved some documentation

1.007     2009-04-21
          add MetaProvider role and MetaResources plugin
            inspired by the work of Fayland Lam

1.006     2009-04-18
          fix a small context error that broke 'dzil install' in some cases

1.005     2009-04-18
          numerous documentation fixes and minor bug fixes
          added 'dzil install'
          thanks to: hdp, sartak, Florian Ragwitz, alexv, obra
          TODO: proper credits file

1.004     2008-10-14
          do not barf if there's no dzil config (thanks, ILMARI)
