@@ -5,6 +5,20 @@ package Dist::Zilla::App::Command::smoke;
 use Dist::Zilla::App -command;
 require Dist::Zilla::App::Command::test;
 
+=head1 SYNOPSIS
+
+Runs your (built) distribution in Smoke Testing Mode.
+
+    dzil smoke
+
+Otherwise identical to
+
+    AUTOMATED_TESTING=1 dzil test
+
+See L<Dist::Zilla::App::Command::test> for more.
+
+=cut
+
 sub abstract { 'smoke your dist' }
 
 sub run {
